[tool.poetry]
name = "claudee"
version = "0.1.0"
description = ""
authors = ["Sway Ducky <swayducky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
anthropic = "^0.30.1"
colorama = "^0.4.6"
pygments = "^2.18.0"
tavily-python = "^0.3.3"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
